--- a/euna.html
+++ b/euna.html
@@ -117,8 +117,7 @@
       <div class="pb-2">
         <h4 class="pb-3 font-weight-bold">Background</h4>
         <h4 class="pb-3">I supported a massive rebrand at Euna.</h4>
-        <p>I joined Euna Solutions in 2022 prior to it's rebrand in 2023, originally with Questica (now known as Euna Budget) and worked primarily with the Budgeting & Grants business units. When the company consolidated it's 6 individual business units
-          into one, my design support grew to span 6 different product lines; Procurement, Permitting, K-12, Payments, Budgeting and Grants.</p>
+        <p>I joined Euna Solutions in 2022 prior to it's rebrand in 2023, originally with Questica (now known as Euna Budget) and worked primarily with the Budgeting & Grants business units. When the company consolidated from 9 individual business units to one, my design support grew to span multiple product lines; Procurement, Permitting, K-12, Payments, Budgeting and Grants.</p>
         <p>I've learned so much about SaaS and marketing during my time at Euna, I've listed some of my highlights below:</p>
         <ul>
           <li class="pb-3"><span class="font-weight-bold">Establish design consistency.</span> Bringing visual cohesiveness to the design projects allowed the brand to communicate more clearly.</li>
@@ -133,45 +132,56 @@
   </section>
 
 
-  <section class="pt-5">
+  <section class="pt-5 pb-5">
+    <div class="container center">
+        <div class="row pt-3">
+          <div class="col-sm-6">
+            <img class="img-fluid" src="img/euna/euna-2.png">
+            <p class="pt-2 text-center caption">Euna Brand Guidelines (Sam Johnston)</p>
+          </div>
+          <div class="col-sm-6">
+            <img class="img-fluid" src="img/euna/euna-cards.png">
+            <p class="pt-2 text-center caption">Events Business Cards (HH)</p>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <section class="pb-4 pt-4" style="background-color: #e3e6f4;">
     <div class="container center">
       <div>
         <div class="text-center">
-          <img class="img-fluid" src="img/euna/euna-2.png">
+          <img class="img-fluid" src="img/euna/euna-4.png">
+          <p class="pt-0 mt-0 pb-3 text-center caption">Euna Budget Whitepaper (HH)</p>
         </div>
-        <p class="pt-2 text-center caption">Euna Solutions Brand Guidelines, Art Directed and created by Samantha Johnston.</p>
       </div>
     </div>
   </section>
 
   <div class="container center pb-3">
-    <div class="row pt-5">
+        <p class="pt-5">Shortly following the rebrand launch, I was tasked with creating newly branded landing page templates for Euna, to support the marketing team's efforts. Each LP category follows a particular colour path that correlates with the core Euna brand. These templates increased the digital team's turnaround time for multiple campaign landing pages (below).</p>
+    <div class="row pt-3">
       <div class="col-sm-6">
         <img class="img-fluid" src="img/euna/euna-1.png">
-        <p class="pt-2 text-center caption">New Euna landing page template examples.</p>
+        <p class="pt-2 text-center caption">New Euna LP Template Examples</p>
       </div>
       <div class="col-sm-6">
-        <img class="img-fluid" src="img/euna/euna-cards.png">
-        <p class="pt-2 text-center caption">Euna Business Cards (HH)</p>
+        <img class="img-fluid" src="img/euna/euna-2.jpg">
+        <p class="pt-2 text-center caption">Events Templates Colour Pathing</p>
       </div>
     </div>
-    <p class="pt-3">I conceptualized, wireframed and designed newly branded landing page templates for Euna, to support the marketing team's efforts. These templates allowed the digital team to efficiently turnaround multiple campaign landing pages ahead of the curve (above, below).</p>
-    <p class="pt-3" style="font-weight: 500;">To accompany the templates, I creating Landing Page Design Guidelines and an Asset Library for preformatted ready-to-use landing page graphics by category for the digital team.</p>
+    <p class="pt-4">To accompany the templates, I creating Landing Page Design Rules and an Asset Library for preformatted ready-to-use landing page graphics by category for the digital team (below).</p>
   </div>
 
-
-
-  <section class="pb-5" style="background-color: #F6F7FE;">
-    <div class="container center pt-3">
+  <section class="pb-4 pt-4" style="background-color: #e3e6f4;">
+    <div class="container center">
       <div>
         <div class="text-center">
-          <img class="img-fluid" src="img/euna/euna-4.jpg">
+          <img class="img-fluid" src="img/euna/euna-5.png">
         </div>
-        <p class="text-center caption">New Euna landing page templates: examples of Webinars.</p>
       </div>
     </div>
   </section>
-
 
 
   <section class="pt-3 pb-3">
