--- a/about.html
+++ b/about.html
@@ -183,13 +183,64 @@
       </div>
   </section>
 
-  <!-- Testimonials -->
 
-  <section class="recent-work pb-4">
+<!-- Process -->
+
+<div class="container pb-4 pt-3">
+  <div class="row center">
+    <div class="container pt-0">
+    <div class="row pt-5">
+      <div class="col-sm-4">
+      <h1 class="text-left font-weight-light pb-2"><span style="font-weight: 300;">My</span> <span class="intro-2" style="font-weight:800;">design</span> <span class="intro-3" style="font-weight:800;">process</span>.</h1>
+      </div>
+      <div class="col-sm-8 pb-3">
+        <ol style="font-size: 12px;">
+          <li style="font-weight: 600;">Sync</li>
+          <p class="pb-1 mb-0"><strong>Review Objectives, Understand Scope, Gather Requirements</strong></p>
+          <p>I ask lots of questions during this stage and gather as much information as possible prior to settling into the project.</p>
+          <li style="font-weight: 600;">Research & Ideate</li>
+          <p class="pb-1 mb-0"><strong>Brainstorm, Document, Conceptualize</strong></p>
+          <p>This is where the creative juices start flowing. I like to touch base post-ideation with the creative director/manager to ensure the work is on track before getting into the heavier lifting.</p>
+          <li style="font-weight: 600;">Design</li>
+          <p class="pb-1 mb-0"><strong>Wireframes, Mock Ups, Preliminary Designs</strong></p>
+          <p>Realize ideas and concepts by translating them into initial designs.</p>
+          <li style="font-weight: 600;">Review</li>
+          <p class="pb-1 mb-0"><strong>Present, Review and Revise</strong></p>
+          <p>Iterate between stages 3 & 4 integrating feedback, revisions and communication with project stakeholders.</p>
+          <li style="font-weight: 600;">Deliver</li>
+          <p>My design process doesn't end once the work is finished and launched. I like to review the performance of the work through metrics and research, to see how I can better reach target audiences.</p>
+        </ol>
+      </div>
+    </div>
+  </div>
+
+  </div>
+</div>
+
+
+  <!-- Testimonials & Peer Feedback -->
+
+
+  <section class="recent-work pb-2" style="background-color: #fffdf2;">
 
     <div class="container">
-      <div class="row pt-5 center">
-        <h3 class="pb-5 pt-5 font-weight-bold">Testimonials</h3>
+      <div class="row pt-3 center">
+        <h3 class="pt-5 font-weight-bold">Recent Peer Feedback</h3>
+        <div class="pb-4">
+          <p class="caption">This peer feedback is from anonymous colleagues at Euna Solutions, January 2024.</p>
+          <p class="pb-3"><span style="font-weight: 400;">Hannah has done an amazing job on design tasks for programs.</span> She has strong project management skills and works together with programs managers on timelines to ensure we stay on track. She is detail-oriented and the quality of her work is consistently excellent. I've loved the work she's put into each design concept. During kick-off calls, Hannah's asks great questions to streamline workflows and ensure that she gathers all project information to ensure a successful outcome. She's also always a pleasure to work with.</p>
+          <p class="pb-3"><span style="font-weight: 400;">Hannah is awesome at what she does.</span> She is incredibly responsive, whether it's answering questions or working on last minute requests. Her eye for detail is another major strength, catching the small things many overlook and making sure everything is perfect. She is very innovative, and her creativity makes our projects shine, setting us apart from the competition. Lastly, she consistently meets deadlines, often submitting tasks ahead of schedule.</p>
+          <p class="pb-3"><span style="font-weight: 400;">Hannah is so talented.</span> Often times I would give her incredibly vague instructions, and yet somehow she would create exactly what I wanted! She's incredibly organized as well, and always on the ball with what is needed, and she sets good timelines. She also set a lot of reminders in Click Up which was great. She's also really fun to work with.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="recent-work pt-5 pb-4">
+
+    <div class="container">
+      <div class="row pt-3 center">
+        <h3 class="pb-3 font-weight-bold">Testimonials</h3>
         <div class="pb-4">
           <p class="pb-5"><span style="font-weight: 400;">*New testimonial coming soon!*<br>(Samantha Johnston, Manager, Creative Design at Euna Solutions, Jan 2024)</span></p>
           <p><span style="font-weight: 400;">In 2021 Hannah has made a substantial contribution to the Marketing and Communications team.</span> Having Hannah work on our team has been seamless. I have not worked with Hannah for that long but in the time that I have, I have felt and seen her
@@ -210,6 +261,8 @@
           <p class="text-right font-weight-bold pb-0 mb-0">—Jon Hudon</p>
           <p class="text-right pb-2 caption">Media Design Manager at Coyle Media Group</p>
         </div>
+      </div>
+    </div>
   </section>
 
 
