feb 15 home & about updates
added ixdf logo membership, certs

--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -88,7 +89,7 @@
         </div>
       </div> -->
 
-    <!-- About Img Desktop old
+  <!-- About Img Desktop old
 
     <div class="container">
       <div class="row pt-4">
@@ -107,7 +108,7 @@
 
   </section> -->
 
-<!-- Old h1
+  <!-- Old h1
         <h1 class="text-left font-weight-light">Hi, I’m <span class="intro-0">Hannah Hatherell</span></br> I <span class="intro-1 font-weight-bold">design</span>, <span class="intro-2 font-weight-bold">illustrate</span>, <span class="intro-3 font-weight-bold">code</span> & <span class="intro-4 font-weight-bold">ride</span>.</h1>
 -->
 
@@ -122,37 +123,60 @@
     <div class="container">
       <div class="row center">
         <div class="container pt-0">
-        <div class="row pt-5">
-          <div class="col-sm-6">
-          <h1 class="text-left font-weight-light"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">research</span>, <span class="intro-2" style="font-weight:800;">design</span> & <span class="intro-3" style="font-weight:800;">illustrate</span>.</h1>
-
-
-          </div>
-          <div class="col-sm-6 pb-3">
-            <p>I’m <span class="intro-0">Hannah Hatherell</span>, a designer based in Ottawa, Ontario. I play a crucial role in leading, supporting and problem-solving visual and creative initiatives for marketing and communications teams. I work to create engaging on-brand user experiences across all channels, from concept to execution. My goal is to drive results through visually compelling and effective design solutions.</p>
-            <ul class="list-inline mb-3">
-              <li class="list-inline-item">
-                <p class="font-weight-bold mb-3 list-inline">Let's connect > </p>
-              </li>
-              <li class="list-inline-item">
-                <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+          <div class="row pt-5">
+            <div class="col-sm-6">
+              <h1 class="text-left font-weight-light"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">research</span>, <span class="intro-2" style="font-weight:800;">design</span> & <span class="intro-3" style="font-weight:800;">illustrate</span>.</h1>
+            </div>
+            <div class="col-sm-6 pb-3">
+              <p>I’m <span class="intro-0">Hannah Hatherell</span>, a designer based in Ottawa, Ontario. I play a crucial role in leading, supporting and problem-solving visual and creative initiatives for marketing and communications teams. I work to create
+                engaging on-brand user experiences across all channels, from concept to execution. My goal is to drive results through visually compelling and effective design solutions.</p>
+              <ul class="list-inline mb-3">
+                <li class="list-inline-item">
+                  <p class="font-weight-bold mb-3 list-inline">Let's connect > </p>
+                </li>
+                <li class="list-inline-item">
+                  <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                       </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                </li>
+                <li class="list-inline-item">
+                  <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
                         <i class="fas fa-envelope"></i>
                       </a>
-              </li>
-            </ul>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-
       </div>
     </div>
     </div>
   </section>
+
+  <div class="bb"></div>
+
+    <div class="container pb-5 mb-5">
+      <div class="row center">
+        <div class="container pt-0">
+          <div class="row pt-5">
+            <div class="col-sm-6">
+              <img class="ixdf-desktop w-50 pr-5 pb-2" src="img/ixdf.png" alt="">
+              <img class="ixdf-mobile w-50 pb-2" src="img/ixdf.png" alt="">
+              <h5 class="text-left font-weight-light"><span style="font-weight: 500; font-size: 20px; letter-spacing: .2px;">CERTIFICATIONS</h5>
+            </div>
+            <div class="col-sm-6 pt-3" style="font-style: italic; font-size: 14px;">
+              <p style="font-style: normal; font-weight: 400;">Currently in progress:</p>
+              <p class="mb-1">AI for Designers</p>
+              <p class="mb-1">Data-Driven Design: Quantitative Research for UX</p>
+              <p class="mb-1">UI Design Patterns for Successful Software</p>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    </div>
 
 
 
@@ -166,11 +190,13 @@
         <h3 class="pb-5 pt-5 font-weight-bold">My values</h3>
         <div class="pb-4">
           <h4 class="font-weight-bold">📚 Always be learning.</h4>
-          <p>Humans are constant works in progress that need to receive feedback in order to grow. I am always looking for ways to challenge and build on my skillset. I like to participate in online courses, read blogs or books on subjects in my field and dabble in new projects.</p>
+          <p>Humans are constant works in progress that need to receive feedback in order to grow. I am always looking for ways to challenge and build on my skillset. I like to participate in online courses, read blogs or books on subjects in my field and
+            dabble in new projects.</p>
         </div>
         <div class="pb-4">
           <h4 class="font-weight-bold">🤓 Work smarter, not harder.</h4>
-          <p>I can’t count the amount of times I’ve found myself getting frustrated by repeating the same action multiple times when trying to achieve something. Constantly asking the question “is there a better way to do accomplish this” has opened me up to a world of automated process-learning, and I'll never go back.</p>
+          <p>I can’t count the amount of times I’ve found myself getting frustrated by repeating the same action multiple times when trying to achieve something. Constantly asking the question “is there a better way to do accomplish this” has opened me up
+            to a world of automated process-learning, and I'll never go back.</p>
         </div>
         <div class="pb-4">
           <h4 class="font-weight-bold">🎨 Embrace your creativity.</h4>
@@ -178,44 +204,45 @@
         </div>
         <div class="pb-4">
           <h4 class="font-weight-bold">😌 Stay humble.</h4>
-          <p>It doesn't matter who you are, bottom line is to always treat others with respect as you would yourself. Because ultimately we're all human sharing the same wants and needs and facing our own battles everyday. Stay true to yourself and stay true to others.</p>
+          <p>It doesn't matter who you are, bottom line is to always treat others with respect as you would yourself. Because ultimately we're all human sharing the same wants and needs and facing our own battles everyday. Stay true to yourself and stay
+            true to others.</p>
         </div>
       </div>
   </section>
 
 
-<!-- Process -->
+  <!-- Process -->
 
-<div class="container pb-4 pt-3">
-  <div class="row center">
-    <div class="container pt-0">
-    <div class="row pt-5">
-      <div class="col-sm-4">
-      <h1 class="text-left font-weight-light pb-2"><span style="font-weight: 300;">My</span> <span class="intro-2" style="font-weight:800;">design</span> <span class="intro-3" style="font-weight:800;">process</span>.</h1>
+  <div class="container pb-4 pt-3">
+    <div class="row center">
+      <div class="container pt-0">
+        <div class="row pt-5">
+          <div class="col-sm-4">
+            <h1 class="text-left font-weight-light pb-2"><span style="font-weight: 300;">My</span> <span class="intro-2" style="font-weight:800;">design</span> <span class="intro-3" style="font-weight:800;">process</span>.</h1>
+          </div>
+          <div class="col-sm-8 pb-3">
+            <ol style="font-size: 12px;">
+              <li style="font-weight: 600;">Sync</li>
+              <p class="pb-1 mb-0"><strong>Review Objectives, Understand Scope, Gather Requirements</strong></p>
+              <p>I ask lots of questions during this stage and gather as much information as possible prior to settling into the project.</p>
+              <li style="font-weight: 600;">Research & Ideate</li>
+              <p class="pb-1 mb-0"><strong>Brainstorm, Document, Conceptualize</strong></p>
+              <p>This is where the creative juices start flowing. I like to touch base post-ideation with the creative director/manager to ensure the work is on track before getting into the heavier lifting.</p>
+              <li style="font-weight: 600;">Design</li>
+              <p class="pb-1 mb-0"><strong>Wireframes, Mock Ups, Preliminary Designs</strong></p>
+              <p>Realize ideas and concepts by translating them into initial designs.</p>
+              <li style="font-weight: 600;">Review</li>
+              <p class="pb-1 mb-0"><strong>Present, Review and Revise</strong></p>
+              <p>Iterate between stages 3 & 4 integrating feedback, revisions and communication with project stakeholders.</p>
+              <li style="font-weight: 600;">Deliver</li>
+              <p>My design process doesn't end once the work is finished and launched. I like to review the performance of the work through metrics and research, to see how I can better reach target audiences.</p>
+            </ol>
+          </div>
+        </div>
       </div>
-      <div class="col-sm-8 pb-3">
-        <ol style="font-size: 12px;">
-          <li style="font-weight: 600;">Sync</li>
-          <p class="pb-1 mb-0"><strong>Review Objectives, Understand Scope, Gather Requirements</strong></p>
-          <p>I ask lots of questions during this stage and gather as much information as possible prior to settling into the project.</p>
-          <li style="font-weight: 600;">Research & Ideate</li>
-          <p class="pb-1 mb-0"><strong>Brainstorm, Document, Conceptualize</strong></p>
-          <p>This is where the creative juices start flowing. I like to touch base post-ideation with the creative director/manager to ensure the work is on track before getting into the heavier lifting.</p>
-          <li style="font-weight: 600;">Design</li>
-          <p class="pb-1 mb-0"><strong>Wireframes, Mock Ups, Preliminary Designs</strong></p>
-          <p>Realize ideas and concepts by translating them into initial designs.</p>
-          <li style="font-weight: 600;">Review</li>
-          <p class="pb-1 mb-0"><strong>Present, Review and Revise</strong></p>
-          <p>Iterate between stages 3 & 4 integrating feedback, revisions and communication with project stakeholders.</p>
-          <li style="font-weight: 600;">Deliver</li>
-          <p>My design process doesn't end once the work is finished and launched. I like to review the performance of the work through metrics and research, to see how I can better reach target audiences.</p>
-        </ol>
-      </div>
+
     </div>
   </div>
-
-  </div>
-</div>
 
 
   <!-- Testimonials & Peer Feedback -->
@@ -228,9 +255,13 @@
         <h3 class="pt-5 font-weight-bold">Recent Peer Feedback</h3>
         <div class="pb-4">
           <p class="caption">This peer feedback is from anonymous colleagues at Euna Solutions, January 2024.</p>
-          <p class="pb-3"><span style="font-weight: 400;">Hannah has done an amazing job on design tasks for programs.</span> She has strong project management skills and works together with programs managers on timelines to ensure we stay on track. She is detail-oriented and the quality of her work is consistently excellent. I've loved the work she's put into each design concept. During kick-off calls, Hannah's asks great questions to streamline workflows and ensure that she gathers all project information to ensure a successful outcome. She's also always a pleasure to work with.</p>
-          <p class="pb-3"><span style="font-weight: 400;">Hannah is awesome at what she does.</span> She is incredibly responsive, whether it's answering questions or working on last minute requests. Her eye for detail is another major strength, catching the small things many overlook and making sure everything is perfect. She is very innovative, and her creativity makes our projects shine, setting us apart from the competition. Lastly, she consistently meets deadlines, often submitting tasks ahead of schedule.</p>
-          <p class="pb-3"><span style="font-weight: 400;">Hannah is so talented.</span> Often times I would give her incredibly vague instructions, and yet somehow she would create exactly what I wanted! She's incredibly organized as well, and always on the ball with what is needed, and she sets good timelines. She also set a lot of reminders in Click Up which was great. She's also really fun to work with.</p>
+          <p class="pb-3"><span style="font-weight: 400;">Hannah has done an amazing job on design tasks for programs.</span> She has strong project management skills and works together with programs managers on timelines to ensure we stay on track. She is detail-oriented
+            and the quality of her work is consistently excellent. I've loved the work she's put into each design concept. During kick-off calls, Hannah's asks great questions to streamline workflows and ensure that she gathers all project information
+            to ensure a successful outcome. She's also always a pleasure to work with.</p>
+          <p class="pb-3"><span style="font-weight: 400;">Hannah is awesome at what she does.</span> She is incredibly responsive, whether it's answering questions or working on last minute requests. Her eye for detail is another major strength, catching the small things
+            many overlook and making sure everything is perfect. She is very innovative, and her creativity makes our projects shine, setting us apart from the competition. Lastly, she consistently meets deadlines, often submitting tasks ahead of schedule.</p>
+          <p class="pb-3"><span style="font-weight: 400;">Hannah is so talented.</span> Often times I would give her incredibly vague instructions, and yet somehow she would create exactly what I wanted! She's incredibly organized as well, and always on the ball with
+            what is needed, and she sets good timelines. She also set a lot of reminders in Click Up which was great. She's also really fun to work with.</p>
         </div>
       </div>
     </div>
@@ -242,10 +273,10 @@
       <div class="row pt-3 center">
         <h3 class="pb-3 font-weight-bold">Testimonials</h3>
         <div class="pb-4">
-          <p class="pb-5"><span style="font-weight: 400;">*New testimonial coming soon!*<br>(Samantha Johnston, Manager, Creative Design at Euna Solutions, Jan 2024)</span></p>
-          <p><span style="font-weight: 400;">In 2021 Hannah has made a substantial contribution to the Marketing and Communications team.</span> Having Hannah work on our team has been seamless. I have not worked with Hannah for that long but in the time that I have, I have felt and seen her
-            impact. I continue to be impressed by the work that she produces. Her attention to detail and the time she takes to inform her decisions shows her commitment to her work. Hannah has a positive attitude and willingness to taking on new initiatives,
-            she is someone I trust and can rely on.</p>
+          <p class="pb-5"><span style="font-weight: 400;">*New testimonial coming soon!*<br>(Samantha Johnston, Manager, Creative Design at Euna Solutions)</span></p>
+          <p><span style="font-weight: 400;">In 2021 Hannah has made a substantial contribution to the Marketing and Communications team.</span> Having Hannah work on our team has been seamless. I have not worked with Hannah for that long but in the time
+            that I have, I have felt and seen her impact. I continue to be impressed by the work that she produces. Her attention to detail and the time she takes to inform her decisions shows her commitment to her work. Hannah has a positive attitude
+            and willingness to taking on new initiatives, she is someone I trust and can rely on.</p>
           <p>Hannah has a genuine enthusiasm in her work and is very invested in contributing to our company’s success. Her dedication to her work, and creative vision makes Hannah a valuable contributor to the team.</p>
           <br>
           <p class="text-right font-weight-bold pb-0 mb-0">—Kristina Henrikson</p>
