--- a/index.html
+++ b/index.html
@@ -117,11 +117,20 @@
     <div class="container center">
       <div>
         <h5 class="pt-4 mt-5 pl-4 pr-4 text-center" style="line-height: 32px; font-size: 30px; font-weight: 200;">Hello 👋 I am an experienced designer with a strategic background in marketing communications, who is passionate about improving the lives of others through design.</h5>
+        <br>
+        <div class="text-center ixdf-mobile">
+          <img class="w-50 pl-3 pr-3 pb-2" src="img/ixdf.png" alt="">
+        </div>
+        <div class="text-center ixdf-desktop">
+          <img class="w-25 pl-3 pr-3 pb-2" src="img/ixdf.png" alt="">
+        </div>
+        <p class="text-center" style="font-size: 12px; font-style: italic; ">I am an active member of the Interaction Design Foundation.</p>
+
         </div>
       </div>
     </section>
 
-  <div class="container pt-5">
+  <div class="container">
   <div class="row pt-5">
     <div class="col-sm-6">
       <a class="d-block mx-auto mb-4" href="bonfire.html">
