--- a/about.html
+++ b/about.html
@@ -167,6 +167,7 @@
             <div class="col-sm-6 pt-3" style="font-style: italic; font-size: 14px;">
               <p style="font-style: normal; font-weight: 400;">Currently in progress:</p>
               <p class="mb-1">AI for Designers</p>
+              <p class="mb-1">UX Design for Virtual Reality</p>
               <p class="mb-1">Data-Driven Design: Quantitative Research for UX</p>
               <p class="mb-1">UI Design Patterns for Successful Software</p>
 
