fixed cmg images
had deleted files for these by accident on initial cleanup, replaced them

--- a/cmg.html
+++ b/cmg.html
@@ -121,13 +121,13 @@
                          <!--Phone & Tablet-->
                         <div class="col-md-6">
                           <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
-                              <img class="img-fluid project" src="img/projects/luxe/luxe-spread-2.png" alt="">
+                              <img class="img-fluid project" src="img/cmg/luxe-spread-2.png" alt="">
                               <p class="pt-2 text-center caption">Luxe Fall 2019</p>
                             </a>
                         </div>
                         <div class="col-md-6">
                           <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">
-                              <img class="img-fluid project cover-open" src="img/projects/luxe/luxe-spread.png" alt="">
+                              <img class="img-fluid project cover-open" src="img/cmg/luxe-spread.png" alt="">
                               <p class="pt-2 text-center caption">Luxe Spring 2019</p>
                             </a>
                         </div>
